# qr-code-generator

./: CHANGELOG.md  LICENSE  README.md  generate_qr_code_images.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run.bat  run.sh
.github/: dependabot.yml
images/: .gitkeep
input/: contacts.xlsx
qr_code_generator/: __init__.py  __main__.py  cli.py  service.py
qr_code_generator/core/: formatter.py  generator.py  interfaces.py  sanitizer.py  validator.py
qr_code_generator/di/: container.py
qr_code_generator/plugins/output/: __init__.py  base.py
qr_code_generator/plugins/payload/: __init__.py  base.py
qr_code_generator/utils/: constants.py  file_utils.py  pii_utils.py
scripts/: setup.ps1  setup.sh  sync-deps.ps1  sync-deps.sh
tests/: conftest.py
tests/integration/: test_end_to_end.py
tests/unit/: test_format_phone.py  test_generate_qr_code.py  test_payload_generators.py  test_redact_pii.py  test_sanitize_filename.py  test_validate_excel.py
